change title legends

--- a/browse.html
+++ b/browse.html
@@ -131,8 +131,11 @@ q = queue()
 <a href="javascript:void(0)" title="zoom out" onclick="return zoomOut()">&#8211;</a>
 <span id="legend"></span>
 <span id="legend2"></span>
-<span>TADs: <svg width="40" height="20"><rect x="0" y="0" width="20" height="20" fill="#fc0"></rect><rect x="20" y="0" width="20" height="20" fill="#c0f"></rect></svg></span>
+<span>&nbsp;TADs: <svg width="40" height="20"><rect x="0" y="0" width="20" height="20" fill="#fc0"></rect><rect x="20" y="0" width="20" height="20" fill="#c0f"></rect></svg></span>
+<span>&nbsp;Interaction: promoter<svg width="20" height="20"><polygon points="3,3 10,17 17,3" fill="#f00"></polygon></svg></span>
+<span>enhancer<svg width="20" height="20"><polygon points="3,3 10,17 17,3" fill="#A020F0"></polygon></svg></span>
 <span id="csel" style="visibility: hidden"><select id="intcsel"></select></span>
+<span id="gname"></span>
 <img id="dmore" src="dmore.gif" style="position: absolute; left:1500px; visibility: hidden"/>
 </div>
 <div id="tooltip" style="position:absolute; z-index:10; visibility:hidden; font-size:16px; background-color:#fff"></div>
