fix duplicated marks

--- a/net.html
+++ b/net.html
@@ -423,7 +423,7 @@ function subnetwork(params) {
 		
 		heatLegend.append('span')
 		  .style('float', 'left')
-		  .text("100%..........10%")
+		  .text("100% . . . 10%")
 		  //.text(heatFormat(d3.min(heatRange)));
 
 		heatLegend.append('span')
