--- a/browse.html
+++ b/browse.html
@@ -69,7 +69,7 @@ var epggUrl = "http://epigenomegateway.wustl.edu/browser/?genome=hg19";
           intc.sel = d3.select(this).property("value")
 		      heatmapImpl()
         })
-	      .style("width", "300px")
+	      .style("width", "200px")
         .selectAll('option')
         .data(intc.Type).enter()
 	      .append("option")
@@ -132,6 +132,7 @@ q = queue()
 <span id="legend"></span>
 <span id="legend2"></span>
 <span>&nbsp;TADs: <svg width="40" height="20"><rect x="0" y="0" width="20" height="20" fill="#fc0"></rect><rect x="20" y="0" width="20" height="20" fill="#c0f"></rect></svg></span>
+<span>&nbsp;NA: <svg width="20" height="20"><rect x="0" y="0" width="20" height="20" fill="#C7EDCC"></rect></svg></span>
 <span>&nbsp;Interaction: promoter<svg width="20" height="20"><polygon points="3,3 10,17 17,3" fill="#f00"></polygon></svg></span>
 <span>enhancer<svg width="20" height="20"><polygon points="3,3 10,17 17,3" fill="#A020F0"></polygon></svg></span>
 <span id="csel" style="visibility: hidden"><select id="intcsel"></select></span>
