--- a/browse.html
+++ b/browse.html
@@ -25,7 +25,8 @@ var col2 = ["#0000FF","#1A1AFF","#3333FF","#4D4DFF","#6666FF","#8080FF","#9999FF
 "#B3B3FF","#CCCCFF","#E6E6FF","#FFFFFF","#FFE6E6","#FFCCCC","#FFB3B3",
 "#FF9999","#FF8080","#FF6666","#FF4D4D","#FF3333","#FF1A1A","#FF0000"]
 var jsonUrl = params.hasOwnProperty("json") ? "&datahub="+params.json : "";
-var epggUrl = "http://epigenomegateway.wustl.edu/browser/?genome=hg19";
+var genome  = params.hasOwnProperty("genome") ? params.genome : "hg19";
+var epggUrl = "http://epigenomegateway.wustl.edu/browser/?genome="+genome;
 
     function drawMain(error, args) {
 			trackname = args[0], seq = args[1], tad = args[2]
